tests/snapshots/bundled_file_viewer__a-tree-with-no-cursor.snap
---
source: tests/bundled_file_viewer.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=true
  line
    text "▾ " muted
    text "repo" accent bold
  line
    text "    " muted
    text "main.rs"
