tests/snapshots/bundled_file_viewer__an-expanded-tree-with-a-collapsed-directory.snap
---
source: tests/bundled_file_viewer.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=true
  line
    text "▾ " selected
    text "repo" bold selected
  line
    text "  ▾ " muted
    text "src" accent bold
  line
    text "      " muted
    text "main.rs"
  line
    text "      " muted
    text "lib.rs"
  line
    text "  ▸ " muted
    text "target" accent bold
  line
    text "    " muted
    text "README.md"
