tests/snapshots/bundled_file_viewer__multi-byte-and-wide-names.snap
---
source: tests/bundled_file_viewer.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=true
  line
    text "▾ " muted
    text "répertoire" accent bold
  line
    text "    " selected
    text "日本語.md" bold selected
