tests/snapshots/bundled_file_viewer__no-folders.snap
---
source: tests/bundled_file_viewer.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=false
  text "No folders" muted
