tests/snapshots/bundled_file_viewer__the-cursor-on-a-directory.snap
---
source: tests/bundled_file_viewer.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=true
  line
    text "▾ " selected
    text "repo" bold selected
  line
    text "    " muted
    text "main.rs"
