tests/snapshots/bundled_file_viewer__the-cursor-on-a-file.snap
---
source: tests/bundled_file_viewer.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=true
  line
    text "▾ " muted
    text "repo" accent bold
  line
    text "    " selected
    text "main.rs" bold selected
